Correçao de pequenos bugs, css feito, ícones maiores

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/b4adf50f1e.js" crossorigin="anonymous"></script>
         <title>
           Jokenpo
@@ -13,25 +14,25 @@
     <div id="alternatives">
       <div id="buttons">
         <button class="btn" id="pedra-btn">
-          <i class="far fa-hand-rock"></i>
+          <i class="far fa-hand-rock fa-2x"></i>
         </button>
         <button class="btn" id="papel-btn">
-          <i class="far fa-hand-paper"></i>
+          <i class="far fa-hand-paper fa-2x"></i>
         </button>
         <button class="btn" id="tesoura-btn">
-          <i class="far fa-hand-scissors"></i>
+          <i class="far fa-hand-scissors fa-2x"></i>
         </button>
       </div>
     </div>
 
     <!-- choices-->
-    <div id="round">
+    <div id="choices">
       <div id="titles">
-        <p>Jogador Computador</p>
+        <p>Jogador | Computador</p>
         <div class="choices">
-          <i class="far fa-hand-rock" id="player-icon"></i>
-          <i class="fas fa-times"></i>
-          <i class="far fa-hand-rock" id="computer-icon"></i>
+          <i class="far fa-hand-rock fa-2x" id="player-icon"></i>
+          <i class="fas fa-times fa-2x"></i>
+          <i class="far fa-hand-rock fa-2x" id="computer-icon"></i>
         </div>
       </div>
     </div>
